@@ -5,13 +5,16 @@ import org.cloudfoundry.identity.uaa.util.JsonUtils;
 
 import javax.servlet.http.Cookie;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 public class CurrentUserCookieFactory {
-    private int sessionTimeout;
     public String CURRENT_USER_COOKIE_NAME = "Current-User";
+    private final boolean secure;
+    private int sessionTimeout;
 
-    public CurrentUserCookieFactory(int sessionTimeout) {
+    public CurrentUserCookieFactory(int sessionTimeout, boolean secure) {
         this.sessionTimeout = sessionTimeout;
+        this.secure = secure;
     }
 
     public Cookie getCookie(UaaPrincipal uaaPrincipal) throws CurrentUserCookieEncodingException {
@@ -20,13 +23,14 @@ public class CurrentUserCookieFactory {
         Cookie cookie = new Cookie(CURRENT_USER_COOKIE_NAME, urlEncode(JsonUtils.writeValueAsString(currentUserInformation)));
         cookie.setPath("/");
         cookie.setHttpOnly(false);
+        cookie.setSecure(secure);
         cookie.setMaxAge(sessionTimeout);
         return cookie;
     }
 
     private String urlEncode(String value) throws CurrentUserCookieEncodingException {
         try {
-            return URLEncoder.encode(value, "UTF-8");
+            return URLEncoder.encode(value, StandardCharsets.UTF_8);
         } catch (Exception e) {
             throw new CurrentUserCookieEncodingException(e);
         }
